--- a/index.html
+++ b/index.html
@@ -580,13 +580,13 @@
                 </div>
                 <div class="col-md-6 contact-info">
                     <div class="follow">
-                        <b>Address:</b><i class="fa fa-map-marker"></i> XYZ road, Mumbai, IN
+                        <b>Address:</b><i class="fa fa-map-marker"></i> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Maharashtra 401105
                     </div>
                     <div class="follow">
                         <b>Phone:</b><i class="fa fa-mobile"></i> +1 1234567890
                     </div>
                       <div class="follow">
-                        <b>Email:</b><i class="fa fa-envelope-o"></i> example@website.com
+                        <b>Email:</b><i class="fa fa-envelope-o"></i> <a href="mailto:s.k.enterprisesco123@gmail.com">s.k.enterprisesco123@gmail.com</a>
                       </div>
                       
                 </div>
