--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         <b>Phone:</b><i class="fa fa-mobile"></i> +1 1234567890
                     </div>
                       <div class="follow">
-                        <b>Email:</b><i class="fa fa-envelope-o"></i> <a href="mailto:s.k.enterprisesco123@gmail.com">s.k.enterprisesco123@gmail.com</a>
+                        <b>Email:</b><i class="fa fa-envelope-o"></i> <a href="mailto:vighneshhupta32@gmail.com">Send To me</a>
                       </div>
                       
                 </div>
