--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!------------------------//Meta , Title & Css Links//---------------------------->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>S.K. Enterprises | Sales & Services</title>
 	<link rel="stylesheet" href="style.css">
+	<!------------------------//Font awesome//---------------------------->
 	<script src="https://kit.fontawesome.com/9290e46f79.js" crossorigin="anonymous"></script>
+	<!------------------------//bootstrap//---------------------------->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!------------------------//Favicon//---------------------------->
     <link rel="icon" type="img/png" href="Img/favicon.png">
 </head>
 <body>
@@ -342,7 +346,7 @@
             				<img class="card-img-top" src="Img/product 1.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Membrane</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -351,7 +355,7 @@
             				<img class="card-img-top" src="Img/product 2.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Pipe</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -360,7 +364,7 @@
             				<img class="card-img-top" src="Img/product 3.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Booster Pump</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -369,7 +373,7 @@
             				<img class="card-img-top" src="Img/product 4.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Mineral</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -380,7 +384,7 @@
             				<img class="card-img-top" src="Img/product 5.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">TDS</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -389,7 +393,7 @@
             				<img class="card-img-top" src="Img/product 6.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">UV</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -398,7 +402,7 @@
             				<img class="card-img-top" src="Img/product 7.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">UF</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -407,7 +411,7 @@
             				<img class="card-img-top" src="Img/product 8.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Tap</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -418,7 +422,7 @@
             				<img class="card-img-top" src="Img/product 9.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Float</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -427,7 +431,7 @@
             				<img class="card-img-top" src="Img/product 10.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Elbows</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -436,7 +440,7 @@
             				<img class="card-img-top" src="Img/product 11.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Sediment</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -445,7 +449,7 @@
             				<img class="card-img-top" src="Img/product 12.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">P.P. Filter</h4>
-              					<a href="#" class="btn btn-primary">See More</a>
+              					<a href="#" class="btn btn-primary">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -593,5 +597,12 @@
               </div>
             </div>    
         </section>
+
+
+        <div class="livechat">
+        	<!-- Start of HubSpot Embed Code -->
+  			<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
+			<!-- End of HubSpot Embed Code -->
+        </div>			
 	</body>
 </html>
