--- a/index.html
+++ b/index.html
@@ -603,6 +603,10 @@
         	<!-- Start of HubSpot Embed Code -->
   			<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
 			<!-- End of HubSpot Embed Code -->
-        </div>			
+        </div>
+
+        <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
+<!-- End of HubSpot Embed Code -->			
 	</body>
 </html>
