--- a/index.html
+++ b/index.html
@@ -566,22 +566,14 @@
             <h2 align="center" style="color: #000;">Get in Touch</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name" id="input">   
-                    </div>
-                        <div class="form-group">
-                        <input type="number" class="form-control" placeholder="Your Number" id="input">   
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email ID" id="input">   
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="4" placeholder="Your Message" id="input"></textarea> 
-                    </div>
-                        <button type="submit" class="btn btn-primary">SEND MESSAGE</button>
-                    </form>
-                </div>
+                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+					<script>
+					  hbspt.forms.create({
+						portalId: "8489497",
+						formId: "24218545-3ffc-4e95-bfc3-66a45576b6cf"
+					});
+					</script>                
+				</div>
                 <div class="col-md-6 contact-info">
                     <div class="follow">
                         <b>Address:</b><i class="fa fa-map-marker"></i> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Maharashtra 401105
@@ -605,6 +597,5 @@
 			<!-- End of HubSpot Embed Code -->
         </div>
 
-		
 	</body>
 </html>
