--- a/index.html
+++ b/index.html
@@ -575,15 +575,7 @@
 					</script>               
 				</div>
                 <div class="col-md-6 contact-info">
-                    <div class="follow">
-                        <b>Address:</b><i class="fa fa-map-marker"></i> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Maharashtra 401105
-                    </div>
-                    <div class="follow">
-                        <b>Phone:</b><i class="fa fa-mobile"></i> +1 1234567890
-                    </div>
-                      <div class="follow">
-                        <b>Email:</b><i class="fa fa-envelope-o"></i> <a href="mailto:vighneshhupta32@gmail.com">Send To me</a>
-                      </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462.11222827621674!2d72.86452413283827!3d19.302338979068725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b12dc6418fd5%3A0x4fd70f588167a!2sRoyal%20Garden%20Restaurant!5e1!3m2!1sen!2sin!4v1600499597866!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                       
                 </div>
               </div>
