--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
         </section>
 
         <section id="footer">
+        	<div class="container">
         	<div class="upper-foot">
         		<div class="row">
         			<div class="col-m-4">
@@ -604,6 +605,7 @@
         	</div>
         	<div class="lower-foot">
         		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid"> DUD3-droid </a>
+        	</div>
         	</div>
         </section>
 
