--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         	<div class="container">
         	<div class="upper-foot">
         		<div class="row">
-        			<div class="col-m-4">
+        			<div class="col-md-4">
         				<h3> ABOUT S.K.ENTERPRISES </h3>
         				<p>SK Enterprises Is an entrepreneurial organization to manufacture Innovative membrane based Reverse Osmosis purification systems for various applications. These products have been developed In house by the pioneering efforts of our entire team of Micro Pure Systems. Basically membrane based R. O. systems are State of the Art technology developed for water desalination on a larger scale.</p>
         			</div>
