--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         			<div class="col-md-4">
         				<h3> CONTACT US </h3>
         				<p>
-        					<i class="fa fa-mobile"></i> +91 9987057317
+        					<i class="fa fa-mobile"></i> +91 9987057317 <br>
         					<i class="fa fa-envelope-o"></i> brand.origin2310@gmail.com
         				</p>
         			</div>
