--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 		    </div>
 		</section>
 
-		<section id="contact">
+<!--		<section id="contact">
             <div class="container">
             <h1 align="center" style="color: #000;">Get in Touch</h1>
             <div class="row">
@@ -580,21 +580,21 @@
                 </div>
               </div>
             </div>    
-        </section>
+        </section>  -->
 
         <section id="footer">
         	<div class="container">
         	<div class="upper-foot">
         		<div class="row">
-        			<div class="col-md-4">
+        			<div class="col-md-4 con-detail">
         				<h3> ABOUT S.K.ENTERPRISES </h3>
         				<p>SK Enterprises Is an entrepreneurial organization to manufacture Innovative membrane based Reverse Osmosis purification systems for various applications. These products have been developed In house by the pioneering efforts of our entire team of Micro Pure Systems. Basically membrane based R. O. systems are State of the Art technology developed for water desalination on a larger scale.</p>
         			</div>
-        			<div class="col-md-4">
+        			<div class="col-md-4 con-detail">
         				<h3> S.K.ENTERPRISES OFFICE </h3>
         				<p><i class="fa fa-map-marker"></i> Bhayander (east) , Thane , Maharashtra , IN</p>
         			</div>
-        			<div class="col-md-4">
+        			<div class="col-md-4 con-detail">
         				<h3> CONTACT US </h3>
         				<p>
         					<i class="fa fa-mobile"></i> +91 9987057317 <br>
@@ -609,11 +609,8 @@
         	</div>
         </section>
 
-        <div class="livechat">
-        	<!-- Start of HubSpot Embed Code -->
+ <!--       <div class="livechat">
   			<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
-			<!-- End of HubSpot Embed Code -->
-        </div>
-
+        </div>  -->
 	</body>
 </html>
