--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         		</div>
         	</div>
         	<div class="lower-foot">
-        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid"> DUD3-droid </a>
+        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid" target="_blank"> DUD3-droid </a>
         	</div>
         	</div>
         </section>
