--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 		        <div class="row why">
 		            <div class="col-md-3 text-center">
 		                <div class="icon">
-		                    <i class="fas fa-tools"></i>
+		                    <i class="fas fa-shipping-fast"></i>
 		                    <h3>Faster & Better Services</h3>
 		                    <p> We Assure Our Cutomers that we a avail our self to service on one call. </p>
 		                </div>
@@ -561,7 +561,7 @@
 		    </div>
 		</section>
 
-<!--		<section id="contact">
+		<section id="contact">
             <div class="container">
             <h1 align="center" style="color: #000;">Get in Touch</h1>
             <div class="row">
@@ -580,37 +580,44 @@
                 </div>
               </div>
             </div>    
-        </section>  -->
+        </section>  
 
-        <section id="footer">
+        <footer id="footer">
         	<div class="container">
         	<div class="upper-foot">
         		<div class="row">
         			<div class="col-md-4 con-detail">
         				<h3> ABOUT S.K.ENTERPRISES </h3>
-        				<p>SK Enterprises Is an entrepreneurial organization to manufacture Innovative membrane based Reverse Osmosis purification systems for various applications. These products have been developed In house by the pioneering efforts of our entire team of Micro Pure Systems. Basically membrane based R. O. systems are State of the Art technology developed for water desalination on a larger scale.</p>
+        				<p style="">SK Enterprises Is an entrepreneurial organization to manufacture Innovative membrane based Reverse Osmosis purification systems for various applications. These products have been developed In house by the pioneering efforts of our entire team of Micro Pure Systems. Basically membrane based R. O. systems are State of the Art technology developed for water desalination on a larger scale.</p>
         			</div>
         			<div class="col-md-4 con-detail">
         				<h3> S.K.ENTERPRISES OFFICE </h3>
-        				<p><i class="fa fa-map-marker"></i> Bhayander (east) , Thane , Maharashtra , IN</p>
+        				<p><i class="fas fa-map-marked-alt"></i><a href="https://www.google.com/maps/place/Royal+Garden+Restaurant/@19.3023513,72.8644562,21z/data=!4m5!3m4!1s0x3be7b12dc6418fd5:0x4fd70f588167a!8m2!3d19.302443!4d72.864441" target="_blank"> Bhayander (east) , Thane , Maharashtra , IN </a></p>
         			</div>
-        			<div class="col-md-4 con-detail">
-        				<h3> CONTACT US </h3>
-        				<p>
-        					<i class="fa fa-mobile"></i> +91 9987057317 <br>
-        					<i class="fa fa-envelope-o"></i> brand.origin2310@gmail.com
-        				</p>
+        			<div class="col-md-4 con-detail ">
+        				<h3> CONTACT US </h3>        				
+        					<p><i class="fas fa-phone-alt"></i><a href="tel:+91 9987057317"> +91 9987057317 </a></p>
+        					<p><i class="fas fa-envelope"></i><a href="mailto:s.k.enterprisesco123@gmail.com"> s.k.enterprisesco123@gmail.com </a></p>
         			</div>
         		</div>
         	</div>
-        	<div class="lower-foot">
-        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid" target="_blank"> DUD3-droid </a>
+        	<hr style="height:1px;border-width:0;color:#000;background-color:#000;">
+        	<div class="lower-foot text-center">
+        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid" target="_blank" class="mylink"> DUD3-droid </a>
         	</div>
         	</div>
-        </section>
+        </footer>
 
- <!--       <div class="livechat">
+       <div class="livechat">
   			<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
-        </div>  -->
+        </div> 
+
+
+        <!--------------------------Smooth Scroll--------------------------->
+        <script  src="smooth-scroll.js"></script>
+
+        <script>
+            var scroll = new SmoothScroll('a[href*="#"]');
+        </script>
 	</body>
 </html>
