--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 				          Products
 				        </a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				          <a class="dropdown-item" href="#">Action</a>
-				          <a class="dropdown-item" href="#">Another action</a>
-				          <a class="dropdown-item" href="#">Something else here</a>
+				          <a class="dropdown-item" href="#machines">Machines</a>
+				          <a class="dropdown-item" href="#parts">Parts</a>
 				        </div>
 				      </li>                     
                     <li class="nav-item">
