--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 				        </div>
 				      </li>                     
                     <li class="nav-item">
-                      <a class="nav-link" href="#Why choose Us">Why Choose Us</a>
+                      <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#why">Why Choose Us</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#contact">Contact Us</a>
