--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
        	<div class="container">
         	<h1 class="title" align="center">OUR PRODUCTS</h1>
     		<section id="machines">
+    			<h2 class="title" align="center">Machines</h2>
     			<div class="row services">
     				<div class="col-md-4">
     					<div class="card" style="width: 18rem;">
@@ -342,6 +343,7 @@
 	   		</section>
 
 	   		<section id="parts">
+	   			<h2 class="title" align="center">Parts</h2>
 	   			<div class="row text-center">
 	   				<div class="col-md-3">
 	   					<div class="card">
