--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         			</div>
         			<div class="col-md-4 con-detail">
         				<h3> S.K.ENTERPRISES OFFICE </h3>
-        				<p><i class="fas fa-map-marked-alt"></i><a href="https://www.google.com/maps/place/Royal+Garden+Restaurant/@19.3023513,72.8644562,21z/data=!4m5!3m4!1s0x3be7b12dc6418fd5:0x4fd70f588167a!8m2!3d19.302443!4d72.864441" target="_blank"> Bhayander (east) , Thane , Maharashtra , IN </a></p>
+        				<p><i class="fas fa-map-marked-alt"></i><a href="https://www.google.com/maps/place/Royal+Garden+Restaurant/@19.3023513,72.8644562,21z/data=!4m5!3m4!1s0x3be7b12dc6418fd5:0x4fd70f588167a!8m2!3d19.302443!4d72.864441" target="_blank"> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Thane 401105 , Maharashtra , IN </a></p>
         			</div>
         			<div class="col-md-4 con-detail ">
         				<h3> CONTACT US </h3>        				
