--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -198,7 +198,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -217,7 +217,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -238,7 +238,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -257,7 +257,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -276,7 +276,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -297,7 +297,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -316,7 +316,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
@@ -335,7 +335,7 @@
 				                </ul>
 				            </div>
 				            <div class="card-body">
-	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link"><botton type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</botton></a>
+	                          	<a href="https://chat.whatsapp.com/DtaVPUd1cJ1CwlkQbmdaDX" class="card-link" target="_blank"><button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Buy Now</button></a>
 	                        </div>
 	                    </div>
                     </div>
