--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             				<img class="card-img-top" src="Img/product 1.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Membrane</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -359,7 +359,7 @@
             				<img class="card-img-top" src="Img/product 2.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Pipe</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -368,7 +368,7 @@
             				<img class="card-img-top" src="Img/product 3.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Booster Pump</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -377,7 +377,7 @@
             				<img class="card-img-top" src="Img/product 4.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Mineral</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -388,7 +388,7 @@
             				<img class="card-img-top" src="Img/product 5.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">TDS</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -397,7 +397,7 @@
             				<img class="card-img-top" src="Img/product 6.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">UV</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -406,7 +406,7 @@
             				<img class="card-img-top" src="Img/product 7.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">UF</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -415,7 +415,7 @@
             				<img class="card-img-top" src="Img/product 8.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Tap</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -426,7 +426,7 @@
             				<img class="card-img-top" src="Img/product 9.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Float</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -435,7 +435,7 @@
             				<img class="card-img-top" src="Img/product 10.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Elbows</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -444,7 +444,7 @@
             				<img class="card-img-top" src="Img/product 11.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">Sediment</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
@@ -453,7 +453,7 @@
             				<img class="card-img-top" src="Img/product 12.jpg" alt="Card image">
             				<div class="card-img-overlay">
               					<h4 class="card-title">P.P. Filter</h4>
-              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary">Purchase Now</a>
+              					<a href="https://chat.whatsapp.com/I0hpeBtBnkPFYLuFOrA6Kp" class="btn btn-primary" target="_blank">Purchase Now</a>
             				</div>
           				</div>
 	   				</div>
