--- a/index.html
+++ b/index.html
@@ -594,12 +594,9 @@
         				<h3> ABOUT S.K.ENTERPRISES </h3>
         				<p>SK Enterprises Is an entrepreneurial organization to manufacture Innovative membrane based Reverse Osmosis purification systems for various applications. These products have been developed In house by the pioneering efforts of our entire team of Micro Pure Systems. Basically membrane based R. O. systems are State of the Art technology developed for water desalination on a larger scale.</p>
         			</div>
-        			<div class="col-md-4 con-detail" style="display: flex;">
+        			<div class="col-md-4 con-detail">
         				<h3> S.K.ENTERPRISES OFFICE </h3>
-        				<div><p>
-        					<i class="fas fa-map-marked-alt" style="height: 100%;"></i><a href="https://www.google.com/maps/place/Royal+Garden+Restaurant/@19.3023513,72.8644562,21z/data=!4m5!3m4!1s0x3be7b12dc6418fd5:0x4fd70f588167a!8m2!3d19.302443!4d72.864441" target="_blank"> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Thane 401105 , Maharashtra , IN </a>
-        				</p>
-        				</div>
+        				<p><i class="fas fa-map-marked-alt"></i><a href="https://www.google.com/maps/place/Royal+Garden+Restaurant/@19.3023513,72.8644562,21z/data=!4m5!3m4!1s0x3be7b12dc6418fd5:0x4fd70f588167a!8m2!3d19.302443!4d72.864441" target="_blank"> Shop No. 6 , Ram Krishna Bldg Indralok Phase 1 , Golden Nest Road Bhayander East, Thane 401105 , Maharashtra , IN </a></p>
         			</div>
         			<div class="col-md-4 con-detail ">
         				<h3> CONTACT US </h3>        				
