--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         	</div>
         	<hr style="height:1px;border-width:0;color:#000;background-color:#000;">
         	<div class="lower-foot text-center">
-        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://github.com/DUD3-droid" target="_blank" class="mylink"> DUD3-droid </a>
+        		Copyright &copy; S.K.ENTERPRISES | Designed & Developed by <a href="https://dud3-droid.github.io/Portfolio/" target="_blank" class="mylink"> DUD3-droid </a>
         	</div>
         	</div>
         </footer>
