--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="descriptison" content="SK Enterprises is a water purifier service provider from Mumbai, company offers cheap and best aquaguard kent water purifier services and maintenance services across Mumbai and Thane.">
+    <meta content="" name="keywords">
+	
+	
 	<title>S.K. Enterprises | Sales & Services</title>
 	<link rel="stylesheet" href="style.css">
 	<!------------------------//Font awesome//---------------------------->
@@ -570,17 +574,25 @@
             <h1 align="center" style="color: #000;">Get in Touch</h1>
             <div class="row">
                 <div class="col-md-6">
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
-					<script>
-					  hbspt.forms.create({
-						portalId: "8489497",
-						formId: "6dbdd766-6414-4e54-b659-45593a62834b"
-					});
-					</script>               
+                    <form action="forms/contact.php" method="POST" role="form" class="">
+						<div class="form-group">
+						  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+						</div>
+						<div class="form-group">
+						  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+						</div>
+						<div class="form-group">
+						  <input type="number" class="form-control" name="number" id="Phone" placeholder="Your Number" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+						</div>
+						<div class="form-group">
+						  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+						</div>
+		
+						<div class="text-center"><button type="submit" class="btn btn-primary" title="Send Message">Send Message</button></div>
+					  </form>              
 				</div>
                 <div class="col-md-6 contact-info">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462.11222827621674!2d72.86452413283827!3d19.302338979068725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b12dc6418fd5%3A0x4fd70f588167a!2sRoyal%20Garden%20Restaurant!5e1!3m2!1sen!2sin!4v1600499597866!5m2!1sen!2sin" width="100%" height="auto" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                      
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462.11222827621674!2d72.86452413283827!3d19.302338979068725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b12dc6418fd5%3A0x4fd70f588167a!2sRoyal%20Garden%20Restaurant!5e1!3m2!1sen!2sin!4v1600499597866!5m2!1sen!2sin" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
                 </div>
               </div>
             </div>    
@@ -611,11 +623,6 @@
         	</div>
         	</div>
         </footer>
-
-       <div class="livechat">
-  			<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8489497.js"></script>
-        </div> 
-
 
         <!--------------------------Smooth Scroll--------------------------->
         <script  src="smooth-scroll.js"></script>
